--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TriviaChance</string>
+
+    <string name="play_solo">Play Solo</string>
+    <string name="play_online">Play Online</string>
+    <string name="settings">Settings</string>
+    <string name="inventory">Backpack</string>
 </resources>
