--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,19 @@
     <string name="play_online">Play Online</string>
     <string name="settings">Settings</string>
     <string name="inventory">Backpack</string>
+
+    <string name="sound">Sound</string>
+    <string name="music">Music</string>
+    <string name="vibration">Vibration</string>
+    <string name="notifications">Notifications</string>
+
+    <string name="redeem">Redeem Prizes Here</string>
+
+    <string-array name="answers">
+        <item>Squirrel</item>
+        <item>Bat</item>
+        <item>Phoenix</item>
+        <item>Alligator</item>
+    </string-array>
+    <string name="question">The Florida Poly mascot is the: </string>
 </resources>
