--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="play_online">Play Online</string>
     <string name="settings">Settings</string>
     <string name="inventory">Backpack</string>
+    <string name="host">Host Game</string>
+    <string name="join">Game ID</string>
 
     <string name="sound">Sound</string>
     <string name="music">Music</string>
