--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="notifications">Notifications</string>
 
     <string name="redeem">Redeem Prizes Here</string>
+    <string name="results">Game Results:</string>
 
     <string-array name="theme_choices">
         <item>Choose One</item>
