Updated Redeem Activity UI slightly Updated inventory UI slightly Updated look of / crop of profile picture on main menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="redeem">Redeem Prizes Here</string>
     <string name="results">Game Results:</string>
 
+    <string name="current_progress">Current Progress:</string>
+
     <string-array name="theme_choices">
         <item>Choose One</item>
         <item>Gold</item>
