fixed main menu not changing theme instantly (now does)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
 
     <string name="current_progress">Current Progress:</string>
 
+    <string name="locked_item">This item is locked</string>
+
     <string-array name="theme_choices">
         <item>Choose One</item>
         <item>Gold</item>
