Added 4 new themes Changed App Icon Added progress bar on questions screen to show how long until the round is over

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
         <item>Gold</item>
         <item>Green</item>
         <item>Red</item>
+        <item>Purple Flowers</item>
+        <item>Bamboo</item>
+        <item>Sugar Frosted Desert</item>
         <item>Main</item>
     </string-array>
 
