Added Host Activity * recycler view not currently functional
Added text box for username
* shows in online game area
* text will stay as user's name until they change it
* if text is changed, changes should be sent to server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="inventory">Backpack</string>
     <string name="host">Host Game</string>
     <string name="join">Game ID</string>
+    <string name="username">Enter Your Username</string>
+
+    <string name="start">Start Game</string>
+    <string name="game_id">Your Unique Game ID is:</string>
 
     <string name="sound">Sound</string>
     <string name="music">Music</string>
