--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="start">Start Game</string>
     <string name="game_id">Your Unique Game ID is:</string>
+    <string name="waiting_for_host">Waiting for Host</string>
 
     <string name="sound">Sound</string>
     <string name="music">Music</string>
@@ -24,15 +25,5 @@
 
     <string name="locked_item">This item is locked</string>
 
-    <string-array name="theme_choices">
-        <item>Choose One</item>
-        <item>Gold</item>
-        <item>Green</item>
-        <item>Red</item>
-        <item>Purple Flowers</item>
-        <item>Bamboo</item>
-        <item>Sugar Frosted Desert</item>
-        <item>Main</item>
-    </string-array>
 
 </resources>
