-Finished Gacha System
-Finished Inventory System

-Bug fixes

-Cleaned up code in InventoryActivity and RedeemActivity to improve readability

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="current_progress">Current Progress:</string>
 
     <string name="locked_item">This item is locked</string>
+    <string name="One">1</string>
+    <string name="backButtonDescription">Button that sends you back to the MainMenu activity</string>
 
 
 </resources>
